tests/spec/compile-fail/088_move_field_from_destroy_self_method.zn
// category: compile-fail
// profile: freestanding
// purpose: self methods of destroy types cannot move out non-Copy fields in safe code

module tests.fail.moveFieldFromDestroySelfMethod;

struct Packet {
    bytes: Array<U8>,
    cleanupNeeded: Bool,
}

impl Packet {
    destroy {
        if self.cleanupNeeded {
            cleanupPacket(self);
        }
    }

    fn intoBytes(move self) -> Array<U8> {
        if self.cleanupNeeded {
            cleanupPacket(self);
            self.cleanupNeeded = false;
        }

        return self.bytes; // expected-error: cannot move field from type with destroy block
    }
}

fn cleanupPacket(packet: Packet) {}
